Fixed accessibility issues
Added ARIA label to search box.
Fixed heading levels.
Fixed issue where cards weren't aligning properly if you scrolled too far down.

--- a/public/style.css
+++ b/public/style.css
@@ -11,3 +11,17 @@
 dt::after {
     content: ": ";
 }
+
+.movie-title {
+    font-size: 20px;
+}
+
+.col {
+    display: flex !important;
+    flex-direction: row !important;
+    flex-wrap: wrap !important;
+}
+
+img {
+    width: 100%;
+}
